updated service, added partial cookies, updated db
